# trunner

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  install.sh  uninstall.sh
src/: CMakeLists.txt  kcm_krunner_llm.desktop  kcm_krunner_llm.json  llmclient.cpp  llmclient.hpp  llmconfig.cpp  llmconfig.hpp  llmconfig.ui  llmrunner.cpp  llmrunner.hpp  plasma-runner-llm.desktop  plasma-runner-llm.json
tests/: CMakeLists.txt  test_llmclient.cpp  test_llmrunner.cpp
